# bevy_ldtk_asset

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yaml
assets/Treasure Hunters/The Crusty Crew/Aseprite/: Crabby.aseprite
assets/ldtk/: all_features.ldtk  embedded_assets.ldtk  empty_single_world.ldtk  example.ldtk  int_grid_rules.ldtk  multi_world.ldtk  side_scroller.ldtk  single_world.ldtk  top_down.ldtk
assets/ldtk/example/: Level_0.ldtkl  Level_1.ldtkl  Level_2.ldtkl
assets/ldtk/single_world/: Level_0.ldtkl  Level_1.ldtkl
assets/ldtk/top_down/: Island_of_Thieves.ldtkl  Isthmus_of_Pain.ldtkl  Level_2.ldtkl
examples/: all_features.rs  example.rs  example2.ldtk  side_scroller.rs  top_down.rs
gimp/: LDtk template.xcf  grass_on_sand.xcf  grass_tile.xcf  sand_on_water.xcf  sand_tile.xcf  terrain.xcf  water_tile.xcf
src/: anchor.rs  asset_labels.rs  bundles.rs  color.rs  components.rs  entity.rs  entity_definition.rs  enum_definition.rs  error.rs  events.rs  field_instance.rs  iid.rs  interface.rs  label.rs  layer.rs  layer_definition.rs  ldtk_asset_trait.rs  ldtk_asset_traits.rs  ldtk_bundle.rs  ldtk_path.rs  level.rs  lib.rs  neighbour.rs  plugin.rs  plugins.rs  prelude.rs  project.rs  project_loader.rs  resources.rs  structs.rs  systems.rs  test.rs  tile_instance.rs  tileset_definition.rs  tileset_rectangle.rs  traits.rs  uid.rs  util.rs  world.rs
src/assets/: ldtk_level.rs  ldtk_level_loader.rs  ldtk_project.rs  ldtk_project_loader.rs  level.rs  mod.rs  project.rs  project_loader.rs  util.rs  world.rs
src/assets/structs/: layer.rs  level.rs  mod.rs  tile.rs  world.rs
src/common_components/: mod.rs
src/entity/: asset.rs  bundle.rs  component.rs  impls.rs  mod.rs  plugin.rs  systems.rs
src/interface/: int_grid_at_location.rs  ldtk_entities_with_tag.rs  level_at_location.rs  mod.rs
src/layer/: asset.rs  bundle.rs  component.rs  extras.rs  impls.rs  int_grid.rs  mod.rs  plugin.rs  systems.rs  tile.rs  util.rs
src/layer/bundle/: entity_layer.rs  mod.rs  tile_layer.rs
src/layer/systems/: entity_layer.rs  mod.rs  tile_layer.rs  tiles.rs
src/ldtk/: entity_instance.rs  int_grid_value.rs  layer_definition.rs  layer_instance.rs  ldtk_json_1_5_3.rs  level_asset.rs  level_component.rs  mod.rs  project.rs  project_asset.rs  project_component.rs  reflect.rs
src/ldtk_json/: JSON_SCHEMA_1.4.1.json  JSON_SCHEMA_1.5.2.json  ldtk_json_1_4_1.rs  ldtk_json_1_5_2.rs  mod.rs
src/level/: asset.rs  bundle.rs  component.rs  extras.rs  impls.rs  mod.rs  plugin.rs  systems.rs
src/level/systems/: mod.rs
src/project/: asset.rs  asset_loader.rs  bundle.rs  component.rs  construct_entity_definitions.rs  construct_enum_definitions.rs  construct_layer_definitions.rs  construct_tileset_definitions.rs  construct_worlds_from_world_json.rs  impls.rs  mod.rs  plugin.rs  systems.rs
src/project/defs/: entity_definition.rs  enum_definition.rs  enum_tag_value.rs  enum_value_definition.rs  int_grid_value.rs  int_grid_value_group.rs  layer_definition.rs  mod.rs  tile_custom_metadata.rs  tile_render_mode.rs  tileset_definition.rs  tileset_rectangle.rs
src/system_params/: entities_with_tag.rs  entity_component_query.rs  entity_component_tileset.rs  ldtk_entities.rs  level_component_query.rs  mod.rs
src/systems/: add_children_once_assets_loaded.rs  handle_new_level.rs  level_asset_loading.rs  load_level_backgrounds.rs  load_world_event.rs  mod.rs  process_load_parameters.rs  process_load_parameters_world.rs  project_asset_loading.rs  promote_ldtkl_files.rs  render_set_from_images.rs  respond_to_new_level_bundle.rs  respond_to_new_world_bundle.rs  update_loaded_ldtk_project.rs  world_set_changed.rs
src/world/: asset.rs  bundle.rs  component.rs  impls.rs  mod.rs  plugin.rs  systems.rs
(+1 files in other folders)
