[package]
name = "bevy_ldtk_asset"
version = "0.5.0"
edition = "2021"
description = "" # — A description of the plugin
repository = "" # — URL of the plugin source repository
license = "" # — The plugin license
keywords = [
  "bevy",
] # — Keywords for the plugin. "bevy" at least is a good idea here
categories = [
  "game-development",
  "game-engines",
] # — Categories of the plugin. See the full list on crates.io.
exclude = [
  "assets",
  "examples",
] # — Files to exclude from the released package. Excluding the assets folder that you may 

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_app = "=0.15.0-rc.2"
bevy_asset = "=0.15.0-rc.2"
bevy_color = "=0.15.0-rc.2"
bevy_ecs = "=0.15.0-rc.2"
bevy_log = "=0.15.0-rc.2"
bevy_math = "=0.15.0-rc.2"
bevy_reflect = "=0.15.0-rc.2"
bevy_render = "=0.15.0-rc.2"
bevy_sprite = "=0.15.0-rc.2"
bevy_utils = "=0.15.0-rc.2"
bevy_tasks = "=0.15.0-rc.2"
path-clean = "1.0"
serde = "1.0"
serde_json = "1.0"
thiserror = "1.0"

[features]
default = ["asset_events_debug"]
asset_events_debug = []
