[package]
name = "bevy_ldtk_asset"
version = "0.5.0"
authors = ["Randal Robinson <stinkytoe42@yahoo.com>"]
edition = "2021"
description = "A Bevy plugin to support LDtk files as assets!"
repository = "https://github.com/stinkytoe/bevy_ldtk_asset"
license = "MIT OR Apache-2.0"
keywords = ["bevy"]
categories = [
  "game-development",
  "game-engines",
  "games",
  "graphics",
  "rendering::data-formats",
]
exclude = [".github", "assets", "examples"]
readme = "README.md"

[dependencies]
bevy_app = "=0.15.0-rc.3"
bevy_asset = "=0.15.0-rc.3"
bevy_color = "=0.15.0-rc.3"
bevy_ecs = "=0.15.0-rc.3"
bevy_log = "=0.15.0-rc.3"
bevy_math = "=0.15.0-rc.3"
bevy_reflect = { version = "=0.15.0-rc.3", features = ["uuid"] }
bevy_render = "=0.15.0-rc.3"
bevy_sprite = "=0.15.0-rc.3"
bevy_utils = "=0.15.0-rc.3"
bevy_tasks = "=0.15.0-rc.3"
path-clean = "1.0"
either = "1.13"
serde = "1.0"
serde_json = "1.0"
thiserror = "2.0"
uuid = "1.11"

[features]
default = []
asset_events_debug = []
