[package]
name = "bevy_ldtk_asset"
version = "0.6.1"
authors = ["Randal Robinson <stinkytoe42@yahoo.com>"]
edition = "2021"
description = "A Bevy plugin to support LDtk files as assets!"
repository = "https://github.com/stinkytoe/bevy_ldtk_asset"
license = "MIT OR Apache-2.0"
keywords = ["bevy"]
categories = [
  "game-development",
  "game-engines",
  "games",
  "graphics",
  "rendering::data-formats",
]
exclude = [".github", ".gitignore", "assets", "examples"]
readme = "README.md"

[dependencies]
bevy_app = { version = "0.15.1", default-features = false }
bevy_asset = { version = "0.15.1", default-features = false }
bevy_color = { version = "0.15.2", default-features = false }
bevy_ecs = { version = "0.15.1", default-features = false }
bevy_image = { version = "0.15.1", default-features = false }
bevy_log = { version = "0.15.1", default-features = false }
bevy_math = { version = "0.15.1", default-features = false }
bevy_reflect = { version = "0.15.1", default-features = false, features = [
  "uuid",
] }
bevy_sprite = { version = "0.15.1", default-features = false }
bevy_tasks = { version = "0.15.1", default-features = false }
bevy_utils = { version = "0.15.1", default-features = false }
path-clean = { version = "1.0", default-features = false }
either = { version = "1.13", default-features = false }
serde = { version = "1.0", default-features = false }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
thiserror = { version = "2.0", default-features = false }
uuid = { version = "1.11", default-features = false }

[features]
default = []
asset_events_debug = []
